tests/baselines/reference/voidOperatorWithBooleanType(strict=true).errors.txt
voidOperatorWithBooleanType.ts(7,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
voidOperatorWithBooleanType.ts(17,25): error TS2454: Variable 'BOOLEAN' is used before being assigned.
voidOperatorWithBooleanType.ts(30,30): error TS2454: Variable 'BOOLEAN' is used before being assigned.
voidOperatorWithBooleanType.ts(34,6): error TS2454: Variable 'BOOLEAN' is used before being assigned.


==== voidOperatorWithBooleanType.ts (4 errors) ====
    // void  operator on boolean type
    var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        static foo() { return false; }
    }
    module M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsAny1 = void BOOLEAN;
                            ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    
    // boolean type literal
    var ResultIsAny2 = void true;
    var ResultIsAny3 = void { x: true, y: false };
    
    // boolean type expressions
    var ResultIsAny4 = void objA.a;
    var ResultIsAny5 = void M.n;
    var ResultIsAny6 = void foo();
    var ResultIsAny7 = void A.foo();
    
    // multiple void  operator
    var ResultIsAny8 = void void BOOLEAN;
                                 ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    
    // miss assignment operators
    void true;
    void BOOLEAN;
         ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    void foo();
    void true, false;
    void objA.a;
    void M.n;